# openbsd_list_macro_printer

./: CMakeLists.txt  CMakePresets.json  README.md  build-bsd.sh  build-mac.sh  build-ubuntu.sh  build.sh  run-on-proc.sh
include/openbsd_list_macro_printer/: ASTConsumer.hh
lib/: ASTConsumer.cc  CMakeLists.txt  PluginASTAction.cc
test/: slist.c
wrappers/: CMakeLists.txt  openbsd_list_macro_printer.in  openbsd_list_macro_printer_mac.in
